@@ -1,14 +1,14 @@
 substituteEps <- function(graph, eps=10^(-4)) {
 	if (is.numeric(graph@m)) return(graph)
-	m <- matrix(gsub("\\\\epsilon", eps, graph@m), nrow=length(nodes(graph)))
+	m <- matrix(gsub("\\\\epsilon", eps, graph@m), nrow=length(getNodes(graph)))
 	options(warn=-1)
 	m2 <- matrix(sapply(m, function(x) {
 						result <- try(eval(parse(text=x)), silent=TRUE);
 						ifelse(class(result)=="try-error",NA,result)
-					}), nrow=length(nodes(graph)))
+					}), nrow=length(getNodes(graph)))
 	options(warn=0)
 	if (all(is.na(m)==is.na(m2))) m <- m2
-	rownames(m) <- colnames(m) <- nodes(graph)
+	rownames(m) <- colnames(m) <- getNodes(graph)
 	graph@m <- m
 	return(graph)
 }
@@ -38,8 +38,8 @@ parse2numeric <- function(graph) {
 	m <- matrix(sapply(graph@m, function(x) {
 						result <- try(eval(parse(text=x)), silent=TRUE);
 						ifelse(class(result)=="try-error",NA,result)
-					}), nrow=length(nodes(graph)))
-	rownames(m) <- colnames(m) <- nodes(graph)
+					}), nrow=length(getNodes(graph)))
+	rownames(m) <- colnames(m) <- getNodes(graph)
 	graph@m <- m
 	return(graph)
 }
