@@ -11,7 +11,7 @@ randomMCPGraph <- function(V=letters[1:10], M=1:4, p=0.2) {
 	g@graphData[[1]] <- "directed"
 	#edgeAttrDefaults(g, "labelX") <- -100
 	#edgeAttrDefaults(g, "labelY") <- -100
-	for (n in nodes(g)) {
+	for (n in getNodes(g)) {
 		edgeL <- edges(g)[n][[1]]
 		w <- runif(length(edgeL))
 		w <- w/sum(w)
@@ -22,7 +22,7 @@ randomMCPGraph <- function(V=letters[1:10], M=1:4, p=0.2) {
 
 isValidGraph <- function(g, alpha=0.05) {
 	if (!all(TRUE==all.equal(sum(getWeights(g)), alpha))) return(paste("Sum of alpha differs from ",alpha,".",sep=""))
-	for (n in nodes(g)) {
+	for (n in getNodes(g)) {
 		w <- edgeWeights(g,"d")[[1]]
 		if (!all(TRUE==all.equal(sum(w),0)||TRUE==all.equal(sum(w),1))) return(paste("Sum of edges from node ",n," is ",sum(w),".",sep=""))
 	}
